# actix-web-project

./: Cargo.toml  Makefile
migrations/: 20240326013708_init.down.sql  20240326013708_init.up.sql
src/: main.rs
src/models/: post.rs
src/routes/: config.rs  mod.rs  post.rs
